--- a/depot/Gemfile
+++ b/depot/Gemfile
@@ -48,3 +48,5 @@ gem 'bcrypt-ruby', '~> 3.0.0'
 
 # Use debugger
 # gem 'debugger', group: [:development, :test]
+
+gem 'rvm-capistrano', group: :development
