Pagination with Kaminari (Ajax)

--- a/depot/Gemfile
+++ b/depot/Gemfile
@@ -54,3 +54,5 @@ gem 'rvm-capistrano', group: :development
 gem 'rails-erd', git: "https://github.com/asmaloney/rails-erd.git"
 
 gem 'haml', '~> 4.0'
+
+gem 'kaminari', '~> 0.14'
