--- a/depot/Gemfile
+++ b/depot/Gemfile
@@ -56,3 +56,5 @@ gem 'rails-erd', git: "https://github.com/asmaloney/rails-erd.git"
 gem 'haml', '~> 4.0'
 
 gem 'kaminari', '~> 0.14'
+
+gem 'stripe'
